# openclaw-rs

./: Cargo.toml  LICENSE  README.md  install.sh
bridge/openclaw-node/: Cargo.toml  README.md  build.rs
bridge/openclaw-node/src/: config.rs  error.rs  events.rs  lib.rs  validation.rs
bridge/openclaw-node/src/agents/: mod.rs  tools.rs
bridge/openclaw-node/src/auth/: api_key.rs  credentials.rs  mod.rs
bridge/openclaw-node/src/providers/: anthropic.rs  mod.rs  openai.rs  types.rs
crates/openclaw-agents/: Cargo.toml  README.md
crates/openclaw-agents/src/: lib.rs
crates/openclaw-agents/src/runtime/: mod.rs
crates/openclaw-agents/src/sandbox/: mod.rs
crates/openclaw-agents/src/tools/: mod.rs
crates/openclaw-agents/src/workflow/: mod.rs
crates/openclaw-channels/: Cargo.toml
crates/openclaw-channels/src/: allowlist.rs  lib.rs  registry.rs  routing.rs  traits.rs
crates/openclaw-channels/src/discord/: mod.rs
crates/openclaw-channels/src/matrix/: mod.rs
crates/openclaw-channels/src/signal/: mod.rs
crates/openclaw-channels/src/slack/: mod.rs
crates/openclaw-channels/src/telegram/: mod.rs
crates/openclaw-channels/src/whatsapp/: mod.rs
crates/openclaw-cli/: Cargo.toml
crates/openclaw-cli/src/: main.rs
crates/openclaw-cli/src/commands/: admin.rs  completion.rs  config.rs  configure.rs  daemon.rs  doctor.rs  gateway.rs  mod.rs  onboard.rs  status.rs
crates/openclaw-cli/src/ui/: mod.rs  output.rs  prompts.rs
crates/openclaw-core/: Cargo.toml  README.md
crates/openclaw-core/benches/: core_benchmarks.rs
crates/openclaw-core/src/: lib.rs
crates/openclaw-core/src/auth/: mod.rs
crates/openclaw-core/src/config/: mod.rs
crates/openclaw-core/src/events/: mod.rs
crates/openclaw-core/src/secrets/: mod.rs
crates/openclaw-core/src/types/: mod.rs
crates/openclaw-core/src/validation/: mod.rs
crates/openclaw-gateway/: Cargo.toml  build.rs
crates/openclaw-gateway/src/: events.rs  lib.rs  middleware.rs  rpc.rs  server.rs  ui_server.rs
crates/openclaw-gateway/src/auth/: config.rs  jwt.rs  middleware.rs  mod.rs  setup.rs  users.rs
crates/openclaw-ipc/: Cargo.toml
crates/openclaw-ipc/src/: lib.rs  messages.rs  transport.rs
crates/openclaw-plugins/: Cargo.toml
crates/openclaw-plugins/src/: api.rs  bridge.rs  lib.rs  native.rs  registry.rs  wasm.rs
crates/openclaw-providers/: Cargo.toml  README.md
crates/openclaw-providers/src/: anthropic.rs  lib.rs  openai.rs  traits.rs  usage.rs
crates/openclaw-ui/: index.html  package-lock.json  package.json  vite.config.ts
crates/openclaw-ui/src/: style.css
crates/openclaw-ui/src/components/layout/: AppHeader.vue  AppLayout.vue  AppSidebar.vue
crates/openclaw-ui/src/composables/: useApi.ts  useWebSocket.ts
crates/openclaw-ui/src/router/: index.ts
crates/openclaw-ui/src/stores/: auth.ts  sessions.ts
crates/openclaw-ui/src/views/: AdminView.vue  AgentsView.vue  ChannelsView.vue  ChatView.vue  DashboardView.vue  LoginView.vue  SessionDetailView.vue  SessionsView.vue  SetupView.vue  ToolsView.vue
docs/: ARCHITECTURE.md  CONTRIBUTING.md  CRATES.md  INTEROP.md  ROADMAP.md  SECURITY.md
documentation/: mkdocs.yml
documentation/docs/: about.md  index.md
documentation/docs/architecture/: crates.md  design.md  index.md  security.md
documentation/docs/assets/stylesheets/: extra.css
documentation/docs/compatibility/: config.md  index.md  migration.md  plugins.md  skills.md
documentation/docs/development/: contributing.md  roadmap.md  setup.md
documentation/docs/getting-started/: configuration.md  index.md  installation.md  quick-start.md
documentation/docs/guides/: agents.md  cli.md  nodejs.md  providers.md  web-dashboard.md
documentation/docs/reference/: agents.md  cli-commands.md  core.md  node.md  providers.md
scripts/: publish.sh
