[workspace]
resolver = "2"
members = [
    "crates/openclaw-core",
    "crates/openclaw-ipc",
    "crates/openclaw-providers",
    "crates/openclaw-agents",
    "crates/openclaw-channels",
    "crates/openclaw-gateway",
    "crates/openclaw-plugins",
    "crates/openclaw-cli",
    "bridge/openclaw-node",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "MIT"
repository = "https://github.com/openclaw/openclaw-rs"
authors = ["OpenClaw Contributors"]

[workspace.dependencies]
# Async runtime
tokio = { version = "1.43", features = ["full"] }
async-trait = "0.1"
futures = "0.3"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
json5 = "0.4"
rkyv = { version = "0.7", features = ["validation"] }

# Storage (grite pattern)
sled = "0.34"
blake2 = "0.10"

# Crypto & secrets
aes-gcm = "0.10"
argon2 = "0.5"
rand = "0.8"
secrecy = { version = "0.10", features = ["serde"] }
zeroize = { version = "1", features = ["derive"] }
jsonwebtoken = "9"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Error handling
thiserror = "2"
anyhow = "1"

# Logging/tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# HTTP/WebSocket (gateway)
axum = { version = "0.8", features = ["ws", "macros"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace", "timeout"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "stream"] }

# IPC (grite pattern)
nng = "1"

# CLI
clap = { version = "4", features = ["derive", "env"] }
dialoguer = { version = "0.11", features = ["fuzzy-select"] }
console = "0.15"
indicatif = "0.17"

# System
dirs = "5"
which = "7"

# Validation
validator = { version = "0.18", features = ["derive"] }
jsonschema = "0.26"
unicode-normalization = "0.1"

# Rate limiting
governor = "0.7"

# Temp files
tempfile = "3"

# Testing
pretty_assertions = "1"
criterion = { version = "0.5", features = ["html_reports"] }

[workspace.lints.rust]
unsafe_code = "deny"
missing_docs = "warn"

[workspace.lints.clippy]
all = "warn"
pedantic = "warn"
nursery = "warn"

[profile.release]
lto = true
codegen-units = 1
strip = true
panic = "abort"

[profile.dev]
# Faster builds for development
opt-level = 0
debug = true
