[package]
name = "openclaw-node"
description = "Node.js bindings for OpenClaw Rust core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
# napi-rs bindings
napi = { version = "2", default-features = false, features = ["napi8", "serde-json", "async"] }
napi-derive = "2"

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
thiserror = { workspace = true }

# Internal
openclaw-core = { path = "../../crates/openclaw-core" }

[build-dependencies]
napi-build = "2"

[lints]
workspace = true
