[package]
name = "openclaw-node"
description = "Node.js bindings for OpenClaw Rust core - AI providers, auth, events, and tools"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
homepage = "https://github.com/openclaw/openclaw-rs"
documentation = "https://docs.rs/openclaw-node"
readme = "README.md"
keywords = ["napi", "nodejs", "ai", "anthropic", "openai"]
categories = ["api-bindings", "development-tools::ffi"]

[lib]
crate-type = ["cdylib"]

[dependencies]
# napi-rs bindings
napi = { version = "2", default-features = false, features = ["napi8", "serde-json", "async", "tokio_rt"] }
napi-derive = "2"

# Async runtime
tokio = { version = "1", features = ["rt-multi-thread", "sync"] }
futures = "0.3"
once_cell = "1.19"

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
thiserror = { workspace = true }

# Hex encoding for encryption keys
hex = "0.4"

# Internal crates (version required for crates.io, path for local dev)
openclaw-core = { version = "0.1.0", path = "../../crates/openclaw-core" }
openclaw-providers = { version = "0.1.0", path = "../../crates/openclaw-providers" }
openclaw-agents = { version = "0.1.0", path = "../../crates/openclaw-agents" }

[build-dependencies]
napi-build = "2"

[lints]
workspace = true
