[package]
name = "openclaw-agents"
description = "Agent runtime and workflow engine for OpenClaw"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
homepage = "https://github.com/openclaw/openclaw-rs"
documentation = "https://docs.rs/openclaw-agents"
readme = "README.md"
keywords = ["ai", "agents", "workflow", "sandbox", "tools"]
categories = ["development-tools", "asynchronous"]

[dependencies]
# Async
tokio = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
thiserror = { workspace = true }

# Logging
tracing = { workspace = true }

# Time
chrono = { workspace = true }

# Temp files for sandbox
tempfile = { workspace = true }

# Internal (version required for crates.io, path for local dev)
openclaw-core = { version = "0.1.0", path = "../openclaw-core" }
openclaw-providers = { version = "0.1.0", path = "../openclaw-providers" }

# Windows Job Objects for sandbox
[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_JobObjects",
    "Win32_System_Threading",
] }

[dev-dependencies]
tempfile = { workspace = true }
tokio = { workspace = true, features = ["test-util", "macros"] }

[lints]
workspace = true
