[package]
name = "openclaw-channels"
description = "Channel adapters for OpenClaw (Telegram, Discord, etc.)"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
# Async
tokio = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
thiserror = { workspace = true }

# Logging
tracing = { workspace = true }

# Time
chrono = { workspace = true }

# HTTP
reqwest = { workspace = true }

# Utilities
uuid = { version = "1", features = ["v4"] }
urlencoding = "2"

# Internal
openclaw-core = { path = "../openclaw-core" }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }

[lints]
workspace = true
