[package]
name = "openclaw-cli"
description = "Command-line interface for OpenClaw"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
homepage = "https://github.com/openclaw/openclaw-rs"
documentation = "https://docs.rs/openclaw-cli"
keywords = ["cli", "ai", "agents", "terminal", "assistant"]
categories = ["command-line-utilities"]

[[bin]]
name = "openclaw"
path = "src/main.rs"

[dependencies]
# Async
tokio = { workspace = true }

# CLI
clap = { workspace = true }
dialoguer = { workspace = true }
console = { workspace = true }
indicatif = { workspace = true }

# System
dirs = { workspace = true }
which = { workspace = true }

# Time
chrono = { workspace = true }

# Random
rand = { workspace = true }

# HTTP client (for status checks)
reqwest = { workspace = true }

# JSON5 parsing
json5 = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
anyhow = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Internal (version required for crates.io, path for local dev)
openclaw-core = { version = "0.1.0", path = "../openclaw-core" }
openclaw-gateway = { version = "0.1.0", path = "../openclaw-gateway" }
openclaw-agents = { version = "0.1.0", path = "../openclaw-agents" }

[lints]
workspace = true
