[package]
name = "openclaw-ipc"
description = "IPC message types and nng transport for OpenClaw"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
homepage = "https://github.com/openclaw/openclaw-rs"
documentation = "https://docs.rs/openclaw-ipc"
keywords = ["ipc", "nng", "rpc", "messaging"]
categories = ["network-programming", "asynchronous"]

[dependencies]
# Async
tokio = { workspace = true }
async-trait = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
rkyv = { workspace = true }

# IPC
nng = { workspace = true }

# Utilities
rand = { workspace = true }

# Error handling
thiserror = { workspace = true }

# Logging
tracing = { workspace = true }

# Internal (version required for crates.io, path for local dev)
openclaw-core = { version = "0.1.0", path = "../openclaw-core" }

[dev-dependencies]
tempfile = { workspace = true }
tokio = { workspace = true, features = ["test-util", "macros"] }

[lints]
workspace = true
