[package]
name = "openclaw-providers"
description = "AI provider clients for OpenClaw (Anthropic, OpenAI, etc.)"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
homepage = "https://github.com/neul-labs/openclaw-rs"
documentation = "https://docs.rs/openclaw-providers"
readme = "README.md"
keywords = ["ai", "anthropic", "openai", "claude", "gpt"]
categories = ["api-bindings", "asynchronous"]

[dependencies]
# Async
tokio = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# HTTP client
reqwest = { workspace = true }

# Error handling
thiserror = { workspace = true }

# Logging
tracing = { workspace = true }

# Internal (version required for crates.io, path for local dev)
openclaw-core = { version = "0.1.0", path = "../openclaw-core" }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }

[lints]
workspace = true
